objects/CSS_JobForm_Detail__c.object
<CustomObject>
    <fields>
        <fullName>CSS_JobForms__c</fullName>
        <label>CSS_JobForms</label>
        <referenceTo>CSS_JobForms__c</referenceTo>
        <relationshipLabel>CSS_JobForm_Details</relationshipLabel>
        <relationshipName>CSS_JobForm_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Form_AtRisk__c</fullName>
        <label>Form_AtRisk</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Form_Closed_Ctrl__c</fullName>
        <label>Form_Closed_Ctrl</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Ctrl</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Form_NA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Form_NA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_ReasonNotes__c</fullName>
        <label>Form_ReasonNotes</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Form_Safe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Form_Safe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JSA_CNG_CriticalBehaviour__c</fullName>
        <label>JSA_CNG_CriticalBehaviour</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Policy/Procedure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JSA_Ergonomics_CriticalBehaviour__c</fullName>
        <label>JSA_Ergonomics_CriticalBehaviour</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Back-Bending/Twisting</fullName>
                </value>
                <value>
                    <fullName>Knee</fullName>
                </value>
                <value>
                    <fullName>Lifting/Lowering</fullName>
                </value>
                <value>
                    <fullName>Pulling/Pushing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JSA_PPE_CriticalBehaviour__c</fullName>
        <label>JSA_PPE_CriticalBehaviour</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Eyes/Face Protection</fullName>
                </value>
                <value>
                    <fullName>Foot Protection</fullName>
                </value>
                <value>
                    <fullName>Fall Protection</fullName>
                </value>
                <value>
                    <fullName>Hand Protection</fullName>
                </value>
                <value>
                    <fullName>Hearing Protection</fullName>
                </value>
                <value>
                    <fullName>Body Protection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JSA_Tools_CriticalBehaviour__c</fullName>
        <label>JSA_Tools_CriticalBehaviour</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tools/Equip. Selection</fullName>
                </value>
                <value>
                    <fullName>Tools/Equip. Condition</fullName>
                </value>
                <value>
                    <fullName>Tools/Equip. Use</fullName>
                </value>
                <value>
                    <fullName>Fork-Lift, Truck, Trailer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JSA_WorkPractice_CriticalBehaviour__c</fullName>
        <description>This Picklist is used to display the values in JSA form under Critical behaviours and based on these value creates multiple Records associated with it</description>
        <label>JSA_WorkPractice_CriticalBehaviour</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Job Safety Assessment</fullName>
                </value>
                <value>
                    <fullName>Ascending/Descending</fullName>
                </value>
                <value>
                    <fullName>Communication</fullName>
                </value>
                <value>
                    <fullName>Eyes on Hands / Work</fullName>
                </value>
                <value>
                    <fullName>Eyes on Path</fullName>
                </value>
                <value>
                    <fullName>Line of Fire</fullName>
                </value>
                <value>
                    <fullName>Pinch Point</fullName>
                </value>
                <value>
                    <fullName>Rushing</fullName>
                </value>
                <value>
                    <fullName>QSOL Procedures</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JSA_WrkProcedures_CriticalBehaviour__c</fullName>
        <label>JSA_WrkProcedures_CriticalBehaviour</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Working Alone</fullName>
                </value>
                <value>
                    <fullName>Lockout/Tagout</fullName>
                </value>
                <value>
                    <fullName>Barricades/Warnings</fullName>
                </value>
                <value>
                    <fullName>Confined Space</fullName>
                </value>
                <value>
                    <fullName>Hot Work</fullName>
                </value>
                <value>
                    <fullName>Place Wheel Chocks</fullName>
                </value>
                <value>
                    <fullName>Spotter</fullName>
                </value>
                <value>
                    <fullName>5S/HouseKeeping</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TSR_ActivityDescription__c</fullName>
        <label>TSR_ActivityDescription</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TSR_ActivityID__c</fullName>
        <label>TSR_ActivityID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TSR_ActivityOwner__c</fullName>
        <label>TSR_ActivityOwner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TSR_ActivitySubject__c</fullName>
        <label>TSR_ActivitySubject</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TSR_ActivityType__c</fullName>
        <description>Used to store activity Type from TSR WebService(SRNumber Data)</description>
        <label>TSR_ActivityType</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TSR_Request__c</fullName>
        <label>TSR_Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TSR_Response__c</fullName>
        <label>TSR_Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>CSS_JobForm_Detail</label>
    <nameField>
        <label>CSS_JobForm_Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSS_JobForm_Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>